@@ -3,6 +3,7 @@ partman-base (126) UNRELEASED; urgency=low
   [ Frans Pop ]
   * base.sh: skip dividers in ask_user if they are the first option.
     Closes: #498845.
+  * base.sh: also avoid consecutive dividers by skipping the second one.
   * base.sh: new function is_multipath_dev.
   * commit.sh: display correct dmraid partition info when confirming changes.
 
@@ -11,7 +12,7 @@ partman-base (126) UNRELEASED; urgency=low
     Patch based on work done by Luke Yelavich <themuso@ubuntu.com> in Ubuntu.
     The improved dmraid support requires parted (>= 1.8.8.git.2008.03.24-10).
 
- -- Frans Pop <fjp@debian.org>  Mon, 15 Sep 2008 13:04:18 +0200
+ -- Frans Pop <fjp@debian.org>  Mon, 15 Sep 2008 22:27:20 +0200
 
 partman-base (125) unstable; urgency=low
 
